--- a/pv-hpccache-nfs.yaml
+++ b/pv-hpccache-nfs.yaml
@@ -11,7 +11,7 @@ spec:
   accessModes:
     - ReadWriteMany
   mountOptions:
-    - vers=4
+    - vers=3
     - rw
     - tcp
     - mountproto=tcp
@@ -22,4 +22,4 @@ spec:
     - retrans=3
   nfs:
     server: 10.240.0.5 
-    path: "/nvme"
+    path: "/hpccache"
